LAContext nil fixed

--- a/plugin.xml
+++ b/plugin.xml
@@ -7,16 +7,19 @@
         <clobbers target="outsystems.plugin.biometricschangedetector" />
     </js-module>
     <platform name="ios">
+        <hook type="before_plugin_install" src="hooks/install_prerequisites.js"/>
+        <hook type="after_plugin_add" src="hooks/add_swift_support.js" />
         <config-file parent="/*" target="config.xml">
-            <feature name="BiometricsChangeDetector">
-                <param name="ios-package" value="BiometricsChangeDetector" />
+            <feature name="BiometricChangeDetector">
+                <param name="ios-package" value="BiometricChangeDetector" />
             </feature>
         </config-file>
         <source-file src="src/ios/BiometricChangeDetector.swift" />
+        <source-file src="src/ios/KeychainHelper.swift" />
     </platform>
     <platform name="android">
         <config-file parent="/*" target="res/xml/config.xml">
-            <feature name="BiometricsChangeDetector">
+            <feature name="BiometricChangeDetector">
                 <param name="android-package" value="outsystems.experts.plugin.biometricschange.BiometricsChangeDetector" />
             </feature>
         </config-file>
