--- a/plugin.xml
+++ b/plugin.xml
@@ -31,5 +31,7 @@
             <uses-permission android:name="android.permission.USE_FINGERPRINT" />
         </config-file>
 
+        <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
+
     </platform>
 </plugin>
